# prediction-markets-sim

./: .gitignore  GPT-5_Feedback.md  history.md  pyproject.toml  readme.md
.claude/: settings.local.json
Writing/: Full Piece Structure.md  §4 (Unstarted).md
Wrting/: Notes & Draft.md  §1 (Published).md  §2 (Published).md  §3 (GPT-5 Completion).md  §3 (In Progress).md
experiments/: calibrate_liquidity.py  comprehensive_visualization.py  experiment_01_aggregation.py  experiment_02_discovery.py  experiment_leakiness_spectrum.py  test_unified_environment.py  visualize_simulation.py
prediction_markets/: __init__.py
prediction_markets/agents/: __init__.py  base.py  discoverer.py  discovery.py  informed.py  noise.py
prediction_markets/environments/: __init__.py  base.py  discoverable.py  hayekian.py  unified.py
prediction_markets/markets/: __init__.py  base.py  contracts.py  lmsr.py
prediction_markets/simulation/: __init__.py  metrics.py  runner.py
tests/: __init__.py  test_basic.py  test_environments.py  test_metrics.py
